packages/app-web/src/views/app/app.scss
@import '../../styles/shared';

.app {
  display: grid;
  position: relative;
  width: 100%;
  min-height: 100%;
  user-select: none;
  line-height: 0;

  @include breakpoint(l, xl) {
    min-height: 100vh;
  }

  &__main {
    display: flex;
    flex-direction: column;
    position: relative;
    grid-area: 1 / 1 / 2 / 2;
    top: 0;
    left: 0;
    right: 0;

    @include with-canvas-mode(plane) {
      // When in plane mode the canvas height is fixed to the window height and
      // should not resize when a modal gets displayed
      height: 100vh;
    }
  }

  &__header {
    position: sticky;
    top: 0;
    left: 0;
    right: 0;
    z-index: 1;
  }

  &__canvas {
    position: relative;
    flex-basis: 0;
    flex-grow: 1;
  }

  &__modals {
    position: relative;
    grid-area: 1 / 1 / 2 / 2;
    pointer-events: none;
  }
}

